force-app/main/default/objects/Attachment__c/Attachment__c.object-meta.xml
<CustomObject>
    <label>Attachment</label>
    <nameField>
        <label>Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>