force-app/main/default/objects/Attachment__c/fields/Contracts_Detail__c.field-meta.xml
<CustomField>
    <fullName>Contracts_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracts Detail</label>
    <referenceTo>Contracts_Detail__c</referenceTo>
    <relationshipLabel>Attachments</relationshipLabel>
    <relationshipName>Attachments</relationshipName>
    <type>Lookup</type>
</CustomField>