force-app/main/default/objects/Attachment__c/fields/Size_Kb__c.field-meta.xml
<CustomField>
    <fullName>Size_Kb__c</fullName>
    <label>Size(Kb)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>